--- a/public/changelog.txt
+++ b/public/changelog.txt
@@ -1,3 +1,8 @@
+2025-12-22
+ - Improved memory usage. Unfortunately breaking and placing blocks quickly lowers FPS now but I'll figure it out later.
+ - Night mode: Hit L to toggle between day and night. Night mode has a starry skybox.
+ - Flashlight: Hit F to toggle a flashlight.
+
 2025-12-21
 - Pause menu with toggleable HUD, controls info, and changelog (what you're reading right now!)
 - Improved key input handling
